--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -1,16 +1,13 @@
 .main {
-
     height:100vh;
     
     .category-container{
         height: 100vh;
-        padding-top: 7vh;
         scroll-behavior: smooth;
     }
     
     .category-container-about {
         height: 200vh;
-        padding-top: 7vh;
         scroll-behavior: smooth;
     }
 }
