--- a/src/assets/scss/_navigation.scss
+++ b/src/assets/scss/_navigation.scss
@@ -7,49 +7,38 @@
     background: #444;
     height: 7vh;
     width: 100%;
-    display: flex;
-    justify-content: space-between;
+    left: 0;
     color: $text-color;
     position: fixed;
     z-index: 100;
     top: 0;
+    display: flex;
 
-    .ion-ios-menu {
-        font-size: 36px;
-        width: 65px;
-        display: flex;
-        cursor: pointer;
-        align-items: center;
-        display: none; //do not show until screen is the right size
-    }
 
     .your-name {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: inline;
+        display: flex; /* the default for span */
         font-size: 25px;
         font-family: Lato-Thin;
         height: 100%;
-        width: 100%;       
-        text-align: center;
+        width:95%;       
         letter-spacing: .5em;
         word-spacing: 0em;
+        text-align: center;
+        justify-content: center;
+        padding-top: 1%;
     }
+
+    //this needs to be fixed actually CANT MOVE IT
+    .hamburger-menu {
+
+    }    
 
     ul {
         height: 100%;
-        margin-block-start: 0;
-        margin-block-end: 0;
-        padding-inline-start: 0;
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
         list-style-type: none;
 
         a {
             text-decoration: none;
-            padding: 0 20px 0 20px;
             font-size: 20px;
             color: $text-color;
 
@@ -74,14 +63,9 @@
         top: -300px;
         left: 89vw;
         transition: 0.4s ease-out;
-        //reverse order of display - icon on top
-        flex-direction: column-reverse;
         padding-top: 1vh;
 
         ul {
-            flex-direction: column;
-            justify-content: flex-start;
-
             //nav-links
             a {
                 width: 100%;
@@ -95,14 +79,7 @@
         }
     }
 
-    //this needs to be fixed
-    .hamburger-menu {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-right: 30vh;
 
-    }    
     
     //.active is equivalent to .menu-content-container.active
     //meaning both classes (menu-content-container and active)
