--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -5,12 +5,12 @@
 @import './about';
 
 body, html {
-    min-height: 100vh;
-    width: 100%;
+    top: 0;
+    left: 0;
     margin: 0;
-    top:0;
-    background-color: #444;
+    padding: 0;
 }
+    
 
 .overlay::before {    
     content: '';
